--- a/build.gradle
+++ b/build.gradle
@@ -1,51 +1,84 @@
 plugins {
-  id 'com.github.ben-manes.versions' version '0.28.0'
+  id 'com.github.ben-manes.versions' version '0.36.0'
   id 'scala'
   id 'java-library'
   id 'maven-publish'
-  id 'com.jfrog.bintray' version '1.8.5'
-}
-
-repositories {
-  jcenter()
-}
-
-dependencies {
-  api 'org.scala-lang:scala-library:2.12.11'
+  id 'signing'
 }
 
 group = 'org.podval.tools'
-version = '0.1.3'
+version = '0.1.4'
 description = 'Recognizes how the code is being run.'
 
-final String projectArtifact = 'org.podval.tools.run'
-final String gitHubRepository = 'dubinsky/podval-run'
+final String gitHubRepository = "dubinsky/podval-run"
 final String gitHubRepositoryUrl = "https://github.com/$gitHubRepository"
+final String orgName = 'Podval Group'
+final String orgUrl = 'http://www.podval.org'
 
-jar.archiveBaseName.set(projectArtifact)
+repositories {
+  mavenCentral()
+}
+
+dependencies {
+  api 'org.scala-lang:scala-library:2.13.4'
+}
+
+tasks.withType(ScalaCompile) {
+  scalaCompileOptions.with {
+    targetCompatibility = '1.8'
+  }
+}
+
+// There is no Java in the project :)
+project.gradle.startParameter.excludedTaskNames.add('compileJava')
+
+jar {
+  manifest {
+    attributes(
+      'Implementation-Title'  : project.description,
+      'Implementation-Version': project.version
+    )
+  }
+}
 
 task sourceJar(type: Jar) {
   from sourceSets.main.allSource
   archiveClassifier.set('sources')
 }
 
+task scaladocJar(type: Jar) {
+  from scaladoc.destinationDir
+  archiveClassifier.set('javadoc')
+}
+scaladocJar.dependsOn scaladoc
+
 publishing {
+  repositories {
+    maven {
+      name = 'mavenCentral'
+      url = version.endsWith('SNAPSHOT') ?
+        'https://oss.sonatype.org/content/repositories/snapshots' :
+        'https://oss.sonatype.org/service/local/staging/deploy/maven2'
+
+      credentials {
+        username = mavenCentralUsername
+        password = mavenCentralPassword
+      }
+    }
+  }
+
   publications {
-    bintrayMavenPublication(MavenPublication) {
-      groupId project.group
-      artifactId projectArtifact
-      version project.version
-
+    library(MavenPublication) {
       from components.java
-
       artifact sourceJar
+      artifact scaladocJar
 
       pom {
-        name = 'podval-run'
+        name = project.name
         description = project.description
         url = gitHubRepositoryUrl
         scm {
-          url = "$gitHubRepositoryUrl"
+          url = gitHubRepositoryUrl
           connection = "scm:git:git://github.com/${gitHubRepository}.git"
           developerConnection = "scm:git:ssh://github.com/${gitHubRepository}.git"
         }
@@ -58,8 +91,8 @@ publishing {
           }
         }
         organization {
-          name = 'Podval Group'
-          url = 'http://www.podval.org'
+          name = orgName
+          url = orgUrl
         }
         developers {
           developer {
@@ -67,8 +100,8 @@ publishing {
             name = 'Leonid Dubinsky'
             email = 'dub@podval.org'
             url = 'http://dub.podval.org'
-            organization = 'Podval Group'
-            organizationUrl = 'http://www.podval.org'
+            organization = orgName
+            organizationUrl = orgUrl
             timezone = '-5'
           }
         }
@@ -77,25 +110,7 @@ publishing {
   }
 }
 
-bintray {
-  user         = 'dubinsky'
-  key          = findProperty('bintrayApiKey')
-  publications = ['bintrayMavenPublication']
-  dryRun       = false
-  publish      = true
-  override     = true
-  pkg {
-    repo                   = 'org.podval'
-    name                   = 'org.podval.tools.run'
-    desc                   = project.description
-    websiteUrl             = gitHubRepositoryUrl
-    issueTrackerUrl        = "${gitHubRepositoryUrl}/issues"
-    vcsUrl                 = "${gitHubRepositoryUrl}.git"
-    githubRepo             = gitHubRepository
-    licenses               = ['Apache-2.0']
-    labels                 = ['Gradle', 'Maven', 'Intellij']
-    publicDownloadNumbers  = true
-    githubReleaseNotesFile = 'CHANGELOG.md'
-    version { name         = project.version }
-  }
+signing {
+  useInMemoryPgpKeys(getProperty('gnupg.dub-podval-org.key'), getProperty('gnupg.dub-podval-org.password'))
+  sign publishing.publications.library
 }
