- no more JCenter!

--- a/tests/gradle/build.gradle
+++ b/tests/gradle/build.gradle
@@ -16,8 +16,7 @@ idea {
 
 allprojects {
   repositories {
-    jcenter()
-    mavenLocal()
+    mavenCentral()
   }
 
   group = 'org.podval.tools'
